tests/ui/pretty_printer_not_sync.stderr
error[E0277]: `Cell<()>` cannot be shared between threads safely
 --> tests/ui/pretty_printer_not_sync.rs:4:21
  |
4 |     requires_sync::<hegel::PrettyPrinter>();
  |                     ^^^^^^^^^^^^^^^^^^^^ `Cell<()>` cannot be shared between threads safely
  |
  = help: within `PrettyPrinter`, the trait `Sync` is not implemented for `Cell<()>`
  = note: if you want to do aliasing and mutation between multiple threads, use `std::sync::RwLock`
note: required because it appears within the type `PhantomData<Cell<()>>`
 --> $RUST/core/src/marker.rs
  |
  | pub struct PhantomData<T: PointeeSized>;
  |            ^^^^^^^^^^^
note: required because it appears within the type `PrettyPrinter`
 --> src/pretty.rs
  |
  | pub struct PrettyPrinter {
  |            ^^^^^^^^^^^^^
note: required by a bound in `requires_sync`
 --> tests/ui/pretty_printer_not_sync.rs:1:21
  |
1 | fn requires_sync<T: Sync>() {}
  |                     ^^^^ required by this bound in `requires_sync`

error[E0277]: `RefCell<hegel::test_case::TestCaseLocalData>` cannot be shared between threads safely
 --> tests/ui/pretty_printer_not_sync.rs:5:21
  |
5 |     requires_sync::<hegel::TestCase>();
  |                     ^^^^^^^^^^^^^^^ `RefCell<hegel::test_case::TestCaseLocalData>` cannot be shared between threads safely
  |
  = help: within `TestCase`, the trait `Sync` is not implemented for `RefCell<hegel::test_case::TestCaseLocalData>`
  = note: if you want to do aliasing and mutation between multiple threads, use `std::sync::RwLock` instead
note: required because it appears within the type `TestCase`
 --> src/test_case.rs
  |
  | pub struct TestCase {
  |            ^^^^^^^^
note: required by a bound in `requires_sync`
 --> tests/ui/pretty_printer_not_sync.rs:1:21
  |
1 | fn requires_sync<T: Sync>() {}
  |                     ^^^^ required by this bound in `requires_sync`

error[E0277]: `RefCell<Option<PrettyPrinter>>` cannot be shared between threads safely
 --> tests/ui/pretty_printer_not_sync.rs:5:21
  |
5 |     requires_sync::<hegel::TestCase>();
  |                     ^^^^^^^^^^^^^^^ `RefCell<Option<PrettyPrinter>>` cannot be shared between threads safely
  |
  = help: within `TestCase`, the trait `Sync` is not implemented for `RefCell<Option<PrettyPrinter>>`
  = note: if you want to do aliasing and mutation between multiple threads, use `std::sync::RwLock` instead
note: required because it appears within the type `TestCase`
 --> src/test_case.rs
  |
  | pub struct TestCase {
  |            ^^^^^^^^
note: required by a bound in `requires_sync`
 --> tests/ui/pretty_printer_not_sync.rs:1:21
  |
1 | fn requires_sync<T: Sync>() {}
  |                     ^^^^ required by this bound in `requires_sync`
